--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -9,25 +9,18 @@
 .tab {
     margin: auto;
     padding: 0;
+    width: 100%;
     background-color: white;
     box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
     display: block;
     flex-direction: column;
     align-items: center;
     height: 50vh;
-    overflow: auto;
+    overflow: scroll;
 }
 
 .tab::-webkit-scrollbar {
-    width: 0;
-}
-
-.tab::-webkit-scrollbar-track {
-    background: #4b4b4e;
-}
-
-.tab::-webkit-scrollbar-thumb {
-    background: #535058;
+    background-color: transparent;
 }
 
 .tab-table {
@@ -36,7 +29,7 @@
     margin: 1rem auto 1rem auto;
     font-size: 0.9em;
     font-family: sans-serif;
-    min-width: 400px;
+    min-width: 50vw;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
@@ -70,22 +63,25 @@
 
 .tab-title {
     width: 100%;
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin: 0;
-    font-weight: bold;
-    text-align: center;
+    padding-left: 0.5rem;
+    text-align: left;
     position: sticky;
+    display: flex;
+    align-items: center;
     top: 0;
     background: white;
     box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
 }
 
-.tab-hr {
-    width: 90%;
+.tab-title svg {
+    min-width: 2rem;
+    margin: 0.25rem 0.5rem 0 0;
 }
 
-.projects, .tasks, .team {
-    width: 100%;
+.tab-hr {
+    width: 90%;
 }
 
 @media screen and (max-width: 599px) {
@@ -95,37 +91,45 @@
         row-gap: 1rem;
     }
 
-    .projects {
+    .projects, .team, .tasks, .recent, .activities {
         grid-column: 1;
-        grid-row: 1;
     }
-    
-    .tasks {
-        grid-column: 1;
-        grid-row: 2;
+
+    .tab {
+        margin-left: 1.25rem;
     }
 }
 
 @media screen and (min-width: 600px) {
     .dashboard {
-        grid-template-columns: repeat(2, 50% [col-start]);
+        grid-template-columns: repeat(4, 25% [col-start]);
         grid-template-rows: repeat(2, 50% [row-start]);
         column-gap: 1rem;
         row-gap: 0.5rem;
     }
 
     .projects {
-        grid-column: 1;
+        grid-column: span 2;
         grid-row: 1;
     }
 
     .team {
-        grid-column: 2;
+        grid-column: span 2;
         grid-row: 1;
     }
     
     .tasks {
         grid-column: span 2;
+        grid-row: 2;
+    }
+
+    .recent {
+        grid-column: 4;
+        grid-row: 2;
+    }
+
+    .activities {
+        grid-column: 3;
         grid-row: 2;
     }
 }
