--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -91,7 +91,7 @@
         row-gap: 1rem;
     }
 
-    .projects, .team, .tasks, .recent, .activities {
+    .projects, .teams, .tasks, .recent, .userActions {
         grid-column: 1;
     }
 
@@ -113,7 +113,7 @@
         grid-row: 1;
     }
 
-    .team {
+    .teams {
         grid-column: span 2;
         grid-row: 1;
     }
@@ -128,7 +128,7 @@
         grid-row: 2;
     }
 
-    .activities {
+    .userActions {
         grid-column: 3;
         grid-row: 2;
     }
