Major changes in dbTransactionService.js - added most of the db transactional methods, excluding some of create/edit/delete ones which require some additional research towards data integrity and corelation

--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -91,7 +91,7 @@
         row-gap: 1rem;
     }
 
-    .projects, .teams, .tasks, .recent, .userActions {
+    .project, .teams, .tasks, .recent, .userActions {
         grid-column: 1;
     }
 
@@ -108,7 +108,7 @@
         row-gap: 0.5rem;
     }
 
-    .projects {
+    .project {
         grid-column: span 2;
         grid-row: 1;
     }
