--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -27,6 +27,7 @@
     border-collapse: collapse;
     width: 100%;
     margin: 1rem auto 1rem auto;
+    margin-left: 1rem;
     font-size: 0.9em;
     font-family: sans-serif;
     min-width: 10vw;
@@ -42,6 +43,10 @@
 .tab-table th,
 .tab-table td {
     padding: 12px 15px;
+}
+
+.selectStatus, .selectTeams {
+    max-width: 10vw;
 }
 
 .tab-table tbody tr {
@@ -64,7 +69,8 @@
 .tab-title {
     width: 100%;
     font-size: 1.5rem;
-    margin: 0;
+    margin: auto;
+    margin-left: 1rem;
     padding-left: 0.5rem;
     text-align: left;
     position: sticky;
@@ -82,6 +88,10 @@
 
 .tab-hr {
     width: 90%;
+}
+
+h1,h2,h3,h4 {
+    margin-left: 1rem;
 }
 
 @media screen and (max-width: 599px) {
